--- a/fashion-app/src/App.css
+++ b/fashion-app/src/App.css
@@ -1,12 +1,38 @@
-.App {
-  text-align: left;
+
+.header-container{
+  width: 100%;
+  background-color: burlywood;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+
+.hearder-logo{
+  width: 40%;
+}
+
+.logo{
+  width: 40%;
+  padding: 15px;
+  margin-left: 10px;
+}
+
+.header-titulo{
+  width: 40%;
+  margin-top: 15px;
 }
 
 h1{
-  color:red;
+  color: black;
 }
+
 h2{
   color: blue;
+}
+
+
+.App {
+  text-align: left;
 }
 
 .App-logo {
