--- a/fashion-app/src/App.css
+++ b/fashion-app/src/App.css
@@ -72,6 +72,7 @@ h1{
 
 .titulo-centrado{
   margin:auto;
+  text-align: center;
   margin-top: 3%;
   margin-bottom: 3%;
   padding: 5px;
@@ -110,6 +111,31 @@ h2{
 .tarjeta-contenido{
   padding: 10px;
   line-height: 5px;
+}
+
+.clientes-container{
+  width: 100%;
+}
+
+.tablaClientes-container{
+  width: 80%;
+  margin:auto;
+}
+
+table{
+  width: 70%;
+  margin: auto;
+  border: 2px solid gray;
+  text-align: center;
+}
+
+th{
+  border: 2px solid gray;
+}
+
+td{
+  border: 2px solid gray; 
+  padding: 4px;
 }
 
 
